# oikan

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  oikan_classification_model.pth  pyproject.toml  regression_example.py  setup.py
.github/workflows/: main.yml  publish.yml  static.yml
benchmarking/: benchmark.py  classification_summary.txt
benchmarking/PMLB - datasets/: classification_benchmark_results.csv  classification_formatter.py  classification_summary.txt  formatted_classification_benchmark_results.csv  formatted_regression_benchmark_results.csv  oikan-v0-0-3-auto-benchmarking-sr.ipynb  regression_benchmark_results.csv  regression_formatter.py  regression_summary.txt
docs/: index.html  projects.html  script.js  style.css
examples/: classification_example.py  classification_tutorial.py  multivariate_function_approximation_tutorial.py  oikan-v0-0-3-get-started-template-notebook.ipynb  regression_example.py  regression_tutorial.py  time_series_tutorial.py  times_series_forecasting_example.py
model_compilers/c/: classification_compiler.c  regression_compiler.c
model_compilers/cpp/: classification_compiler.cpp  regression_compiler.cpp
model_compilers/go/: classification_compiler.go  regression_compiler.go
model_compilers/javascript/: classification_compiler.js  (+1 more)
models/: classification_model.pth  oikan_classification_model.pth  oikan_regression_model.pth  regression_model.pth
notebooks/: classification_benchmark.ipynb  oikan-v0-0-2-classification-benchmark-tests.ipynb  oikan-v0-0-2-regression-benchmark-tests.ipynb  regression_benchmark.ipynb
oikan/: __init__.py  elasticnet.py  exceptions.py  metrics.py  model.py  model_io.py  neural.py  regularization.py  symbolic.py  trainer.py  utils.py  visualize.py
oikan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
outputs/: california_housing_model.json  classification_symbolic_formula.txt  iris_model.json  regression_symbolic_formula.txt
(+4 files in other folders)
