[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oikan"
version = "0.0.2.5"
description = "OIKAN: Optimized Interpretable Kolmogorov-Arnold Networks"
authors = [{name = "Arman Zhalgasbayev"}]
dependencies = [
    "torch",
    "numpy",
    "scikit-learn",
    "tqdm"  # Add tqdm for progress bars
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]