[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oikan"
version = "0.0.3.10"
description = "OIKAN: Neuro-Symbolic ML for Scientific Discovery"
readme = "README.md"
authors = [{name = "Arman Zhalgasbayev"}]
dependencies = [
    "torch",
    "numpy",
    "scikit-learn",
    "tqdm",
    "sympy"
]
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
'Homepage' = "https://github.com/silvermete0r/oikan"
'Bug Tracker' = "https://github.com/silvermete0r/oikan/issues"